implementation of the use of pictures

--- a/templates/new.html
+++ b/templates/new.html
@@ -4,6 +4,7 @@
 {% load tz %}
 {% load custom_filters %}
 {% load custom_tags %}
+{% load thumbnail %}
 <!-- Название у нас будет Product -->
 {% block title %}
     News
@@ -16,6 +17,9 @@
             <div class="article-metadata">
                 <small class="text-muted">{{ art_views.time|date:'d.m.Y H:i' }}</small>
                 <small class="text-muted">({% trans 'author' %}: {{ art_views.author.full_name }})</small><br>
+                {% if art_views.image %}
+                    <img src="{{ art_views.image.url }}" alt="{{ art_views.title }}" class="media">
+                {% endif %}
                 <p>{% for cat in art_views.new_cat.all %}
                     <small class="fw-bold">{% trans 'category' %}: <a
                             href="{% url 'categori_list' cat.id %}">{{ cat.title }}</a></small>
