--- a/templates/news_create.html
+++ b/templates/news_create.html
@@ -5,7 +5,7 @@
 {% load custom_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">{% trans 'New article' %}</legend>
