--- a/templates/post_created_email.html
+++ b/templates/post_created_email.html
@@ -1,48 +1,15 @@
-{#<!DOCTYPE html>#}
-{#{% load i18n %}#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
-{#    <title>{% trans 'Document' %}</title>#}
-{#</head>#}
-{#<body>#}
-{#<h2>{% trans 'Hello! New' %} <a href="{{ link }}">{% trans 'article' %}</a> {% trans 'in your favorite section' %}</h2>#}
-{#<ul>#}
-{#    {{ text }}#}
-{#</ul>#}
-{#</body>#}
-{#</html>#}
-
 <!DOCTYPE html>
+{% load i18n %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% trans 'Document' %}</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            background-color: #f7f7f7;
-            padding: 20px;
-            border-radius: 15px;
-        }
-        h2 {
-            color: #446699;
-        }
-        a {
-            color: #0088cc;
-        }
-    </style>
 </head>
 <body>
-<div class="container">
-    <h2>{% trans 'Hello! New' %} <a href="{{ link }}">{% trans 'article' %}</a> {% trans 'in your favorite section' %}</h2>
-    <p>{{ text }}</p>
-</div>
+<h2>{% trans 'Hello! New' %} <a href="{{ link }}">{% trans 'article' %}</a> {% trans 'in your favorite section' %}</h2>
+<ul>
+    {{ text }}
+</ul>
 </body>
 </html>
