--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -7,7 +7,6 @@
 <head>
     {% get_hour as HOUR %}
 
-
     {% load static %}
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -48,7 +47,8 @@
                 <a class="nav-item nav-link" href="{% url 'subscription' %}"
                    class="btn-secondary btn-sm">{% trans 'Subscribe' %}</a>
                 {% if request.user.is_authenticated %}
-                    <a class="nav-item nav-link">{% trans 'Welcome, ' %}{{ request.user.username }}</a>
+                    <a class="nav-item nav-link" href="{% url 'update_profile' %}">
+                        {% trans 'Welcome, ' %}{{ request.user.username }}</a>
                     <a class="nav-item nav-link" href="{% url 'account_logout' %}">{% trans 'Out' %}</a>
                 {% else %}
                     <a class="nav-item nav-link" href="{% url 'account_login' %}">{% trans 'Int' %}</a>
