--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2>Редактирование профиля</h2>
     {% if request.user.author.avatar %}
-        <img src="{{ request.user.author.avatar.url }}" alt="Аватар">
+        <img src="{{ request.user.author.avatar.url }}" alt="Аватар" style="max-width: 100px; max-height: 100px;">
     {% endif %}
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -12,3 +12,6 @@
         <button type="submit">Сохранить изменения</button>
     </form>
 {% endblock %}
+
+
+
