--- a/templates/news.html
+++ b/templates/news.html
@@ -48,23 +48,31 @@
     {% else %}
         <h2>{% trans 'No news!' %}</h2>
     {% endif %}
+    <nav aria-label="Page navigation example">
+    <ul class="pagination">
     {% if page_obj.has_previous %}
-        <a href="?{% url_replace page=1 %}">1</a>
+        <li class="page-item"><a class="page-link" href="?{% url_replace page=1 %}">1</a></li>
         {% if page_obj.previous_page_number != 1 %}
             ...
-            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+            <li class="page-item"><a class="page-link"
+                                     href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+            </li>
         {% endif %}
     {% endif %}
 
     {# Информация о текущей странице #}
-    {{ page_obj.number }}
+    <li class="page-item active"><a class="page-link" href="#">{{ page_obj.number }}</a></li>
 
     {# Информация о следующих страницах #}
     {% if page_obj.has_next %}
-        <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+        <li class="page-item"><a class="page-link"
+                                 href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+        </li>
         {% if paginator.num_pages != page_obj.next_page_number %}
             ...
-            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+            <li class="page-item"><a class="page-link"
+                                     href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+            </li>
         {% endif %}
     {% endif %}
 
