--- a/templates/news_search.html
+++ b/templates/news_search.html
@@ -6,51 +6,104 @@
 {% load custom_tags %}!
 
 {% block content %}
-    <br>
-    {##}
-    <form action="" method="get">
-        {{ filterset.form.as_p }}
-        <input type="submit" value="{% trans 'Find' %}">
-    </form>
+    <div class="container">
+        <h2 class="my-4">{% trans 'Search' %}</h2>
+        <form action="" method="get" class="mb-4">
+            {{ filterset.form.as_p }}
+            <button type="submit" class="btn btn-primary">{% trans 'Find' %}</button>
+        </form>
 
-    <h1>{% trans 'Search results' %}</h1>
-    {% if articlesearch %}
-        <table>
+        <h1>{% trans 'Search results' %}</h1>
+        {% if articlesearch %}
             {% for art in articlesearch %}
-                <article>
-                    <div>
-                        <h6>{{ art.time|date:'d.m.Y H:i' }}</h6>
-                        <h4>{{ art.title }}</h4>
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ art.title }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">{{ art.time|date:'d.m.Y H:i' }}</h6>
+                        <a href="{{ art.get_absolute_url }}" class="btn btn-secondary btn-sm mt-1 mb-1">{% trans 'Read more' %}</a>
                     </div>
-                    <form action={{ art.get_absolute_url }}>
-                        <input type="submit" value="{% trans 'Read more' %}">
-                    </form>
-                    <hr>
-                </article>
+                </div>
             {% empty %}
-                <p>{% trans 'No publications found for your query' %}<br>{% trans 'Try again with a different wording' %}</p>
+                <p>{% trans 'No publications found for your query' %}<br>{% trans 'Try again with a different wording' %}
+                </p>
             {% endfor %}
-        </table>
-    {% endif %}
-
-    {% if page_obj.has_previous %}
-        <a href="?{% url_replace page=1 %}">1</a>
-        {% if page_obj.previous_page_number != 1 %}
-            ...
-            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
         {% endif %}
-    {% endif %}
 
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {% if page_obj.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?{% url_replace page=1 %}">1</a></li>
+                    {% if page_obj.previous_page_number != 1 %}
+                        ...
+                        <li class="page-item"><a class="page-link"
+                                                 href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
+
+                {# Информация о текущей странице #}
+                <li class="page-item active"><a class="page-link" href="#">{{ page_obj.number }}</a></li>
+
+                {# Информация о следующих страницах #}
+                {% if page_obj.has_next %}
+                    <li class="page-item"><a class="page-link"
+                                             href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+                    </li>
+                    {% if paginator.num_pages != page_obj.next_page_number %}
+                        ...
+                        <li class="page-item"><a class="page-link"
+                                                 href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
+    {#    <br>#}
+    {##}
+    {#    <form action="" method="get">#}
+    {#        {{ filterset.form.as_p }}#}
+    {#        <input type="submit" value="{% trans 'Find' %}">#}
+    {#    </form>#}
+    {##}
+    {#    <h1>{% trans 'Search results' %}</h1>#}
+    {#    {% if articlesearch %}#}
+    {#        <table>#}
+    {#            {% for art in articlesearch %}#}
+    {#                <article>#}
+    {#                    <div>#}
+    {#                        <h6>{{ art.time|date:'d.m.Y H:i' }}</h6>#}
+    {#                        <h4>{{ art.title }}</h4>#}
+    {#                    </div>#}
+    {#                    <form action={{ art.get_absolute_url }}>#}
+    {#                        <input type="submit" value="{% trans 'Read more' %}">#}
+    {#                    </form>#}
+    {#                    <hr>#}
+    {#                </article>#}
+    {#            {% empty %}#}
+    {#                <p>{% trans 'No publications found for your query' %}<br>{% trans 'Try again with a different wording' %}</p>#}
+    {#            {% endfor %}#}
+    {#        </table>#}
+    {#    {% endif %}#}
+    {##}
+    {#    {% if page_obj.has_previous %}#}
+    {#        <a href="?{% url_replace page=1 %}">1</a>#}
+    {#        {% if page_obj.previous_page_number != 1 %}#}
+    {#            ...#}
+    {#            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>#}
+    {#        {% endif %}#}
+    {#    {% endif %}#}
+    {##}
     {# Информация о текущей странице #}
-    {{ page_obj.number }}
-
+    {#    {{ page_obj.number }}#}
+    {##}
     {# Информация о следующих страницах #}
-    {% if page_obj.has_next %}
-        <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
-        {% if paginator.num_pages != page_obj.next_page_number %}
-            ...
-            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
-        {% endif %}
-    {% endif %}
+    {#    {% if page_obj.has_next %}#}
+    {#        <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>#}
+    {#        {% if paginator.num_pages != page_obj.next_page_number %}#}
+    {#            ...#}
+    {#            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>#}
+    {#        {% endif %}#}
+    {#    {% endif %}#}
 
 {% endblock content %}
